# DataStruct

./: CMakeLists.txt  Main.c  README.md
00_StudyC/: 01_dataType.c
00_StudyC++/: README.md  __01_cppDataType.cpp  __02_cppVarScope.cpp  __03_cppPoint.cpp
